--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,142 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width" initial-scale="1.0">
+    <title>Athlets</title>
     <link rel="stylesheet" href="./styles/main.css">
   </head>
   <body>
-    <img src="./images/logo.svg" alt="Logo">
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <main class="people">
+      <article class="people__person person">
+          <section class="person__photo photo">
+              <img  class="photo__img" src="./images/Mayweather.jpg" alt="Floyd Mayweather">
+              <span class="photo__rank">1</span>
+          </section>
+          <section class="person__details details">
+              <a class="details__name">Floyd Mayweather</a>
+              <section class="details__extra-inf">
+                  <span class="sport">Boxing, </span>
+                  <span class="pay">$285M</span>
+              </section>
+          </section>
+      </article>
+      <article class="people__person person">
+          <section class="person__photo photo">
+              <img  class="photo__img" src="./images/Messi.jpg" alt="Lionel Messi">
+              <span class="photo__rank">2</span>
+          </section>
+          <section class="person__details details">
+              <a class="details__name">Lionel Messi</a>
+              <section class="details__extra-inf">
+                  <span class="sport">Soccer, </span>
+                  <span class="pay">$111M</span>
+              </section>
+          </section>
+      </article>
+      <article class="people__person person">
+          <section class="person__photo photo">
+              <img  class="photo__img" src="./images/Ronaldo.jpg" alt="Cristiano Ronaldo">
+              <span class="photo__rank">3</span>
+          </section>
+          <section class="person__details details">
+              <a class="details__name">Cristiano Ronaldo</a>
+              <section class="details__extra-inf">
+                  <span class="sport">Soccer, </span>
+                  <span class="pay">$108M</span>
+              </section>
+          </section>
+      </article>
+      <article class="people__person person">
+          <section class="person__photo photo">
+              <img  class="photo__img" src="./images/McGregor.jpg" alt="Conor McGregor">
+              <span class="photo__rank">4</span>
+          </section>
+          <section class="person__details details">
+              <a class="details__name">Conor McGregor</a>
+              <section class="details__extra-inf">
+                  <span class="sport">Mixed Martial Arts, </span>
+                  <span class="pay">$99M</span>
+              </section>
+          </section>
+      </article>
+      <article class="people__person person">
+          <section class="person__photo photo">
+              <img  class="photo__img" src="./images/Neymar.jpg" alt="Neymar">
+              <span class="photo__rank">5</span>
+          </section>
+          <section class="person__details details">
+              <a class="details__name">Neymar</a>
+              <section class="details__extra-inf">
+                  <span class="sport">Soccer, </span>
+                  <span class="pay">$90M</span>
+              </section>
+          </section>
+      </article>
+      <article class="people__person person">
+          <section class="person__photo photo">
+              <img  class="photo__img" src="./images/James.jpg" alt="LeBron James">
+              <span class="photo__rank">6</span>
+          </section>
+          <section class="person__details details">
+              <a class="details__name">LeBron James</a>
+              <section class="details__extra-inf">
+                  <span class="sport">Basketball, </span>
+                  <span class="pay">$85.5M</span>
+              </section>
+          </section>
+      </article>
+      <article class="people__person person">
+          <section class="person__photo photo">
+              <img  class="photo__img" src="./images/Federer.jpg" alt="Roger Federer">
+              <span class="photo__rank">7</span>
+          </section>
+          <section class="person__details details">
+              <a class="details__name">Roger Federer</a>
+              <section class="details__extra-inf">
+                  <span class="sport">Tennis, </span>
+                  <span class="pay">$77.2M</span>
+              </section>
+          </section>
+      </article>
+      <article class="people__person person">
+          <section class="person__photo photo">
+              <img  class="photo__img" src="./images/Curry.jpg" alt="Stephen Curry">
+              <span class="photo__rank">8</span>
+          </section>
+          <section class="person__details details">
+              <a class="details__name">Stephen Curry</a>
+              <section class="details__extra-inf">
+                  <span class="sport">Basketball, </span>
+                  <span class="pay">$76.9M</span>
+              </section>
+          </section>
+      </article>
+      <article class="people__person person">
+          <section class="person__photo photo">
+              <img  class="photo__img" src="./images/Ryan.jpg" alt="Matt Ryan">
+              <span class="photo__rank">9</span>
+          </section>
+          <section class="person__details details">
+              <a class="details__name">Matt Ryan</a>
+              <section class="details__extra-inf">
+                  <span class="sport">Football, </span>
+                  <span class="pay">$67.3M</span>
+              </section>
+          </section>
+      </article>
+      <article class="people__person person">
+          <section class="person__photo photo">
+              <img  class="photo__img" src="./images/Stafford.jpg" alt="Matthew Stafford">
+              <span class="photo__rank">10</span>
+          </section>
+          <section class="person__details details">
+              <a class="details__name">Matthew Stafford</a>
+              <section class="details__extra-inf">
+                  <span class="sport">Football, </span>
+                  <span class="pay">$59.5M</span>
+              </section>
+          </section>
+      </article>
+  </main>
   </body>
 </html>
